01-minio-ns.yaml
kind: "Namespace"
apiVersion: "v1"
metadata:
  name: "minio"
  labels:
    name: "minio"
