02-minio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  namespace: minio
  labels:
    app: minio
spec:
  ports:
    - name: console
      port: 9001
      targetPort: 9001
      protocol: TCP
    - name: api
      port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: minio
