03-minio-pvC.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  namespace: minio
  labels:
    app: minio
spec:
  ports:
    - name: console
      port: 9001
      targetPort: 9001
      protocol: TCP
    - name: api
      port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: minio
root@ubuntu-2204-lab:~/minio# cat minio-pvc.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  namespace: minio
  name: minio-pv-claim
  labels:
    app: minio-storage-claim
spec:
  storageClassName: microk8s-hostpath
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi
